# gogoo-panel-pasteboard

./: CMakeLists.txt  Makefile.in  aclocal.m4  configure
data/: CMakeLists.txt  Makefile.in  gogoo-panel-pasteboard.desktop.in
data/theme/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.pasteboard.service.in  mnb-pasteboard-marshal.c  mnb-pasteboard-marshal.h
